# learn_opengl

./: .gitignore  ACCAT_opengl_vs2019_x64.bat  CMakeLists.txt
ACCAT_OGL/: ACCAT_OGL.sln  ACCAT_OGL.vcxproj  ACCAT_OGL.vcxproj.filters  Shader.cpp  Shader.h  camera.h  camera_fps.h  glad.c  main.cpp
ACCAT_OGL/shaders/: blinnphong.fr  blinnphong.vt  blinnphong_light_obj.fr  fshader_Blue.frag  fshader_Yellow.frag  fshader_texture.frag  shader_assimp.fr  shader_assimp.vt  shader_zbfr.vt  simple_vshader.vert  vshader_mvp.vert  vshader_texture.vert
ACCAT_OGL/x64/Debug/: ACCAT_OGL.exe.recipe  ACCAT_OGL.ilk  ACCAT_OGL.vcxproj.FileListAbsolute.txt  vc143.idb
ACCAT_OGL/x64/Debug/ACCAT_OGL.tlog/: ACCAT_OGL.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/glad/: glad.h
libs/: glfw3.lib
shader/: blinnphong_light_obj.fr  blinnphong_light_obj.vt
source/: Shader.cpp  Shader.h  camera_fps.h  main.cpp
